--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="imagenes/Sin título (500 x 100 px) (1).png" alt="Logo Cadetería A&H" class="logo">
+    <img src="imagenes/logo.png" alt="Logo Cadetería A&H" class="logo">
     <h1>CADETERÍA a&amp;h</h1>
     <p class="subtitulo">Envíos dentro de Montevideo y Las Piedras</p>
   </header>
