--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
  <section class="galeria-carousel">
   <button class="prev">&#10094;</button>
   <div class="galeria-slide">
-    <img src="/imagenes/6.png" alt="Horarios">
-    <img src="/imagenes/8.png" alt="zona 1">
-    <img src="/imagenes/9.png" alt="zona 2">
-    <img src="/imagenes/10.png" alt="zona 3">
-    <img src="/imagenes/11.png" alt="tarifas">
+    <img src="imagenes/6.png" alt="Horarios">
+    <img src="imagenes/8.png" alt="zona 1">
+    <img src="imagenes/9.png" alt="zona 2">
+    <img src="imagenes/10.png" alt="zona 3">
+    <img src="imagenes/11.png" alt="tarifas">
   </div>
   <button class="next">&#10095;</button>
 </section>
