--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
   <button class="prev">&#10094;</button>
   <div class="galeria-slide">
     <img src="imagenes/6.png" alt="Horarios">
-    <img src="imagenes/zona1.png" alt="zona 1">
-    <img src="imagenes/zona2.png" alt="zona 2">
-    <img src="imagenes/zona3.png" alt="zona 3">
+    <img src="imagenes/zonaUno.png" alt="zona 1">
+    <img src="imagenes/zonaDos.png" alt="zona 2">
+    <img src="imagenes/zonaTres.png" alt="zona 3">
     <img src="imagenes/tarifa.png" alt="tarifas">
   </div>
   <button class="next">&#10095;</button>
