--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
  <section class="galeria-carousel">
   <button class="prev">&#10094;</button>
   <div class="galeria-slide">
-    <img src="imagenes/6.png" alt="Horarios">
+    <img src="imagenes/horarios.png" alt="Horarios">
     <img src="imagenes/zonaUno.png" alt="zona 1">
     <img src="imagenes/zonaDos.png" alt="zona 2">
     <img src="imagenes/zonaTres.png" alt="zona 3">
