--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
     <img src="imagenes/zonaDos.png" alt="zona 2">
     <img src="imagenes/zonaTres.png" alt="zona 3">
     <img src="imagenes/tarifa.png" alt="tarifas">
+    <img src="imagenes/consultar.png" alt="consultar">
+    <img src="imagenes/info.png" alt="info">
+    <img src="imagenes/metodosPago.png" alt="metodos de pago">
   </div>
   <button class="next">&#10095;</button>
 </section>
